--- a/app/views/layouts/partials/_banners.html.erb
+++ b/app/views/layouts/partials/_banners.html.erb
@@ -56,7 +56,7 @@
                             <h3 class="h2">Variety of products</h3>
                             <p>                              
                                 We bring you the most beautiful and comfortable shoes. 
-                                <%= link_to 'See their information', { controller: 'shop', action: 'index' }, rel: 'sponsored', class: 'text-success' %> on this website. You can <%= link_to 'create an account', { controller: 'shop', action: 'index' }, rel: 'sponsored', class: 'text-success' %> to place an order. 
+                                <%= link_to 'See their information', shop_index_path, rel: 'sponsored', class: 'text-success' %> on this website. You can <%= link_to 'create an account', shop_index_path, rel: 'sponsored', class: 'text-success' %> to place an order. 
                                 Thank you.
                             </p>
                         </div>
