--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,3 +1,91 @@
 /*
 Custom Css
 */
+#page-loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 999;
+    background-color: #F5F5F5;
+}
+  
+.three-balls {
+    margin: 0 auto;
+    width: 70px;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 45%;
+}
+  
+.three-balls .ball {
+    position: relative;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: #59ab6e;
+    display: inline-block;
+    -webkit-animation: bouncedelay 2.0s infinite cubic-bezier(.62, .28, .23, .99) both;
+    animation: bouncedelay 2.0s infinite cubic-bezier(.62, .28, .23, .99) both;
+}
+  
+.three-balls .ball1 {
+    -webkit-animation-delay: -.16s;
+    animation-delay: -.16s;
+}
+  
+.three-balls .ball2 {
+    -webkit-animation-delay: -.08s;
+    animation-delay: -.08s;
+}
+  
+@keyframes bouncedelay {
+  0% {
+    bottom: 0;
+  }
+  16.66% {
+    bottom: 40px;
+  }
+  33.33% {
+    bottom: 0px;
+  }
+  50% {
+    bottom: 40px;
+  }
+  66.66% {
+    bottom: 0px;
+  }
+  83.33% {
+    bottom: 40px;
+  }
+  100% {
+    bottom: 0;
+  }
+}
+  
+@-webkit-keyframes bouncedelay {
+  0% {
+    bottom: 0;
+  }
+  16.66% {
+    bottom: 40px;
+  }
+  33.33% {
+    bottom: 0px;
+  }
+  50% {
+    bottom: 40px;
+  }
+  66.66% {
+    bottom: 0px;
+  }
+  83.33% {
+    bottom: 40px;
+  }
+  100% {
+    bottom: 0;
+  }
+}
