--- a/app/views/layouts/partials/_categories.html.erb
+++ b/app/views/layouts/partials/_categories.html.erb
@@ -2,7 +2,7 @@
 <section class="container py-5">
     <div class="row text-center pt-3">
         <div class="col-lg-6 m-auto">
-            <h1 class="h1">Categories</h1>
+            <h1 class="h1">Ages</h1>
             <p>
                 Our products are diverse in age and customers.
             </p>
