--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -24,7 +24,7 @@
             <div class="col-md-4 pt-5">
                 <h2 class="h2 text-light border-bottom pb-3 border-light">Products</h2>
                 <ul class="list-unstyled text-light footer-link-list">              
-                    <li><%= link_to 'Luxury', '#', class: 'text-decoration-none' %></li>
+                    <li><%= link_to 'Coupons', coupons_path, class: 'text-decoration-none' %></li>
                     <li><%= link_to 'Sport Wear', '#', class: 'text-decoration-none' %></li>
                     <li><%= link_to 'Men\'s Shoes', '#', class: 'text-decoration-none' %></li>
                     <li><%= link_to 'Women\'s Shoes', '#', class: 'text-decoration-none' %></li>
