--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,13 +5,29 @@
     <div class="container py-5">
         <div class="row text-center py-3">
             <div class="col-lg-6 m-auto">
-                <h1 class="h1">Featured Product</h1>
+                <h1 class="h1">New Arrival</h1>
                 <p>
-                    Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident.
+                    We always import the newest products from genuine distributors as soon as possible.
                 </p>
             </div>
         </div>
-    <%= render partial: 'layouts/partials/advertising_products' %>
+        <div class="row">
+            <%= render partial: 'layouts/partials/advertising_product', collection: @new_arrival_products, as: :product %>
+        </div>
+    </div>
+</section>
+<section class="bg-white">
+    <div class="container py-5">
+        <div class="row text-center py-3">
+            <div class="col-lg-6 m-auto">
+                <h1 class="h1">Featured Product</h1>
+                <p>
+                    The most popular and best-selling products in our store.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <%= render partial: 'layouts/partials/advertising_product', collection: @featured_products, as: :product %>
+        </div>
     </div>
 </section>
