--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -21,7 +21,10 @@
                         <%= link_to 'Shop', shop_index_path, class: 'nav-link' %>
                     </li>
                     <li class="nav-item">
-                        <%= link_to 'Contact', contact_index_path, class: 'nav-link' %>
+                        <%= link_to 'Coupons', contact_index_path, class: 'nav-link' %>
+                    </li>
+                    <li class="nav-item">   
+                        <%= link_to 'Contact', coupons_path, class: 'nav-link' %>
                     </li>
                 </ul>
             </div>
