--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Shop#index</h1>
-<p>Find me in app/views/shop/index.html.erb</p>
+<!-- Start Content -->
+<div class="container py-5">
+    <div class="row">
+        <div class="col-lg-3">
+            <h1 class="h2 pb-4">Product Filters</h1>
+            <%= render partial: 'layouts/partials/product_filters', locals: { categories: @categories, ages: @ages, product_groups: @product_groups } %>
+        </div>
+        <div class="col-lg-9">
+            <%= render partial: 'layouts/partials/menu_control' %>
+            <div class="row" id="products">
+                <%= render partial: 'layouts/partials/product', collection: @products, as: :product %>
+            </div>
+            <%= render partial: 'layouts/partials/pagination' %>
+        </div>
+    </div>
+</div>
+<!-- End Content -->
