--- a/app/views/layouts/partials/_product.html.erb
+++ b/app/views/layouts/partials/_product.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<div name="product" class="col-md-4">
     <div class="card mb-4 product-wap rounded-0">
         <div class="card rounded-0">
             <%= image_tag product.product_images.find_by(is_default: true).image_url, class: 'card-img rounded-0 img-fluid', alt: product.product_name %>
