--- a/app/views/layouts/partials/_show_more.html.erb
+++ b/app/views/layouts/partials/_show_more.html.erb
@@ -1,4 +1,4 @@
-<div div="row">
+<div id="show-more" class="row <%= is_show_more ? 'visible' : 'invisible' %>">
     <div class="col text-center pt-3">
         <a class="btn btn-success shadow rounded" onclick="show_more()">Show more</a>
     </div>
