--- a/app/views/layouts/partials/_menu_control.html.erb
+++ b/app/views/layouts/partials/_menu_control.html.erb
@@ -2,24 +2,22 @@
     <div class="col-md-6">
         <ul class="list-inline shop-top-menu pb-3 pt-1">
             <li class="list-inline-item">
-                <a class="h3 text-dark text-decoration-none mr-3" href="#">All</a>
+                <a name="item" id="all" class="h3 text-dark text-decoration-none mr-3 cursor-pointer text-success" onclick="filter_products('all', 'all' )">All</a>
             </li>
             <li class="list-inline-item">
-                <a class="h3 text-dark text-decoration-none mr-3" href="#">Men's</a>
+                <a name="item" id="gender-control-true" class="h3 text-dark text-decoration-none mr-3 cursor-pointer" onclick="filter_products('gender', 'true' )">Men's</a>
             </li>
             <li class="list-inline-item">
-                <a class="h3 text-dark text-decoration-none" href="#">Women's</a>
-            </li>
-            <li class="list-inline-item">
-                <a class="h3 text-dark text-decoration-none" href="#">Kid's</a>
+                <a name="item" id="gender-control-false" class="h3 text-dark text-decoration-none mr-3 cursor-pointer" onclick="filter_products('gender', 'false' )">Women's</a>
             </li>
         </ul>
     </div>
     <div class="col-md-6 pb-4">
         <div class="d-flex">
-            <select class="form-control">
-                <option>A to Z</option>
-                <option>Price</option>
+            <select id="option-filter" class="form-control" onchange="change_option_filter()">
+                <option value="name">A to Z</option>
+                <option value="newest">Newest</option>
+                <option value="price">Price ↑</option>
             </select>
         </div>
     </div>
