--- a/app/views/layouts/partials/_product_filters.html.erb
+++ b/app/views/layouts/partials/_product_filters.html.erb
@@ -1,26 +1,33 @@
 <ul class="list-unstyled templatemo-accordion">
-    <li class="pb-3">
-        <a name="item" id="categories" class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
-            Categories
-            <i class="fa fa-fw fa-chevron-circle-down mt-1"></i>
-        </a>
-        <ul id="categories-options" name="options" class="collapse show list-unstyled pl-3">
-            <% categories.each do |category| %>
-                <li><a name="item" id="categories-<%= category.id %>" class="text-decoration-none cursor-pointer" onclick="filter_products('categories', '<%= category.id %>' )"><%= category.category_name %></a></li>       
-            <% end %>           
-        </ul>
-    </li>
-    <li class="pb-3">
-        <a name="item" id="ages" class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
-            Ages
-            <i class="fa fa-fw fa-chevron-circle-down mt-1"></i>
-        </a>
-        <ul id="ages-options" name="options" class="collapse show list-unstyled pl-3">
-            <% ages.each do |age| %>
-                <li><a name="item" id="ages-<%= age.id %>" class="text-decoration-none cursor-pointer" onclick="filter_products('ages', '<%= age.id %>' )"><%= age.age_name %></a></li>              
-            <% end %>           
-        </ul>
-    </li>
+    
+    <% unless categories.count == 0 %>
+        <li class="pb-3">
+            <a name="item" id="categories" class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
+                Categories
+                <i class="fa fa-fw fa-chevron-circle-down mt-1"></i>
+            </a>
+            <ul id="categories-options" name="options" class="collapse show list-unstyled pl-3">
+                <% categories.each do |category| %>
+                    <li><a name="item" id="categories-<%= category.id %>" class="text-decoration-none cursor-pointer" onclick="filter_products('categories', '<%= category.id %>' )"><%= category.category_name %></a></li>       
+                <% end %>           
+            </ul>
+        </li>        
+    <% end %>
+    
+    <% unless ages.count == 0 %>
+        <li class="pb-3">
+            <a name="item" id="ages" class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
+                Ages
+                <i class="fa fa-fw fa-chevron-circle-down mt-1"></i>
+            </a>
+            <ul id="ages-options" name="options" class="collapse show list-unstyled pl-3">
+                <% ages.each do |age| %>
+                    <li><a name="item" id="ages-<%= age.id %>" class="text-decoration-none cursor-pointer" onclick="filter_products('ages', '<%= age.id %>' )"><%= age.age_name %></a></li>              
+                <% end %>           
+            </ul>
+        </li>
+    <% end %>
+       
     <li class="pb-3">
         <a name="item" id="gender" class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
             Gender
@@ -31,18 +38,37 @@
             <li><a name="item" id="gender-false" class="text-decoration-none cursor-pointer" onclick="filter_products('gender', 'false' )">Women's</a></li>
         </ul>
     </li>
+    
+    <% unless product_groups == 0 %>
+        <li class="pb-3">
+            <a name="item" id="product_groups" class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
+                Product groups
+                <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
+            </a>
+            <ul id="product_groups-options" name="options" class="collapse list-unstyled pl-3">
+                <% product_groups.each do |product_group| %>
+                    <li><a name="item" id="product_groups-<%= product_group.id %>" class="text-decoration-none cursor-pointer" onclick="filter_products('product_groups', '<%= product_group.id %>' )"><%= product_group.product_group_name %></a></li>          
+                <% end %>  
+            </ul>
+        </li>
+    <% end %>
+    
+    <% unless events.count == 0 %>
+        <li class="pb-3">
+            <a name="item" id="events" class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
+                Events
+                <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
+            </a>
+            <ul id="events-options" name="options" class="collapse list-unstyled pl-3">
+                <% events.each do |event| %>
+                    <li><a name="item" id="events-<%= event.id %>" class="text-decoration-none cursor-pointer" onclick="filter_products('events', '<%= event.id %>' )"><%= event.event_name %></a></li>          
+                <% end %>  
+            </ul>
+        </li>      
+    <% end %>
+    
     <li class="pb-3">
         <a name="item" id="sale" class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#" onclick="filter_products('sale', null )" >Sale</a>
     </li>
-    <li class="pb-3">
-        <a name="item" id="product_groups" class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
-            Product groups
-            <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
-        </a>
-        <ul id="product_groups-options" name="options" class="collapse list-unstyled pl-3">
-            <% product_groups.each do |product_group| %>
-                <li><a name="item" id="product_groups-<%= product_group.id %>" class="text-decoration-none cursor-pointer" onclick="filter_products('product_groups', '<%= product_group.id %>' )"><%= product_group.product_group_name %></a></li>          
-            <% end %>  
-        </ul>
-    </li>
+    
 </ul>
