--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-lg-3">
             <h1 class="h2 pb-4">Product Filters</h1>
-            <%= render partial: 'layouts/partials/product_filters', locals: { categories: @categories, ages: @ages, product_groups: @product_groups } %>
+            <%= render partial: 'layouts/partials/product_filters', locals: { categories: @categories, ages: @ages, product_groups: @product_groups, events: @events } %>
         </div>
         <div class="col-lg-9">
             <%= render partial: 'layouts/partials/menu_control' %>
