--- a/app/views/layouts/partials/_menu_control.html.erb
+++ b/app/views/layouts/partials/_menu_control.html.erb
@@ -14,10 +14,10 @@
     </div>
     <div class="col-md-4 pb-4">
         <div class="d-flex">
-            <select id="option-filter" class="form-control" onchange="change_option_filter()">
-                <option value="name">A to Z</option>
-                <option value="newest">Newest</option>
-                <option value="price">Price ↑</option>
+            <select id="option-filter" class="form-control font-weight-300" onchange="change_option_filter()">
+                <option class="font-weight-300" value="name">A to Z</option>
+                <option class="font-weight-300" value="newest">Newest</option>
+                <option class="font-weight-300" value="price">Price ↑</option>
             </select>
         </div>
     </div>
