--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -93,6 +93,19 @@ Custom Css
     bottom: 0;
   }
 }
-.font-size-1-rem{
+.font-size-1-rem {
   font-size: 1rem!important;
+}
+.font-weight-300 {
+  font-weight: 300!important;
+}
+.font-weight-400 {
+  font-weight: 400!important;
+}
+.margin-bottom-0-rem {
+  margin-bottom: 0rem!important;;
+}
+.item-img {
+  height: 50px;
+  width: 50px;
 }
