--- a/app/views/layouts/partials/_product.html.erb
+++ b/app/views/layouts/partials/_product.html.erb
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="card-body">
-            <%= link_to product.product_name, home_index_path, class: 'h3 text-decoration-none' %>
+            <%= link_to product.product_name, info_product_products_path({id: product.id}), class: 'h3 text-decoration-none' %>
             <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
                 <li><%= product.origin %></li>
                 <li class="pt-2">
