--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -1,5 +1,5 @@
 <!-- Header -->
-<nav class="navbar navbar-expand-lg navbar-light shadow">
+<nav class="navbar navbar-expand-lg navbar-light shadow-sm">
     <div class="container d-flex justify-content-between align-items-center">
 
         <%= link_to "Yolo Shop", home_index_path, class: 'navbar-brand text-success logo h1 align-self-center' %>
