reviews login with google

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
     <%= render partial: 'layouts/partials/preloader' %>
     <%= render partial: 'layouts/partials/top_nav' %>
     <%= render partial: 'layouts/partials/header' %>
+    <%= render partial: 'layouts/partials/sign_in' %>
 
     <%= yield %>
 
