--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -21,3 +21,4 @@
 </div>
 <!-- End Content -->
 <%= javascript_include_tag 'ajax_products', 'data-turbolinks-track': 'load' %>
+<%= javascript_include_tag 'ajax_reviews', 'data-turbolinks-track': 'load' %>
