--- a/app/views/layouts/partials/_product.html.erb
+++ b/app/views/layouts/partials/_product.html.erb
@@ -4,7 +4,13 @@
             <%= image_tag product.product_images.find_by(is_default: true).image_url, class: 'card-img rounded-0 img-fluid', alt: product.product_name %>
             <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
                 <ul class="list-unstyled">
-                    <li><a id="btn-favorite-<%= product.id %>" class="btn text-white <%= product.reviews.find_by(user_id: current_user.id).is_favored ? 'btn-secondary' : 'btn-success' %>" onclick="products_favorite('<%= product.id %>')"><i class="far fa-heart"></i></a></li>
+                
+                <% if user_signed_in? && !product.reviews.find_by(user_id: current_user.id).nil? %>
+                    <li><a id="btn-favorite-<%= product.id %>" class="btn text-white <%= product.reviews.find_by(user_id: current_user.id).is_favored ? 'btn-secondary' : 'btn-success' %>" onclick="products_favorite('<%= product.id %>')"><i class="far fa-heart"></i></a></li>                    
+                <% else %>
+                    <li><a id="btn-favorite-<%= product.id %>" class="btn text-white btn-success" onclick="products_favorite('<%= product.id %>')"><i class="far fa-heart"></i></a></li>
+                <% end %>
+            
                     <li><a class="btn btn-success text-white mt-2" href="/products/<%= product.meta_title %>"><i class="far fa-eye"></i></a></li>
                     <li><a class="btn btn-success text-white mt-2" href="shop-single.html"><i class="fas fa-cart-plus"></i></a></li>
                 </ul>
